--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Belt/belts.yml
@@ -1273,3 +1273,68 @@
           tags:
           - RMCWeaponSMGM63
           - RMCWeaponSMGM63B2
+
+- type: entity
+  parent: RMCBeltHolsterPistol
+  id: RMCBeltHolsterNailgun
+  name: customized nailgun holster
+  description: Combination of a M276 pistol holster and engineering toolbelt that have been cannibalized into a unique belt that can holster a compact nailgun and two spare nailgun magazines.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Belt/holster_nailgun.rsi
+  - type: Clothing
+    sprite: _RMC14/Objects/Clothing/Belt/holster_nailgun.rsi
+  - type: Storage # holds up to 2 mags plus gun
+    maxItemSize: Normal
+    grid:
+    - 0,0,5,1 # 3 slots
+    whitelist:
+      components:
+      - Nailgun
+  - type: FixedItemSizeStorage
+  - type: LimitedStorage
+    limits:
+    - popup: rmc-storage-limit-one-gun
+      whitelist:
+        tags:
+        - Sidearm
+    - popup: rmc-storage-limit-max-mags
+      count: 2
+      whitelist:
+        tags:
+        - RMCMagazineSMGNailgun
+  - type: CMHolster
+    whitelist:
+      components:
+      - Nailgun
+  - type: Tag
+    tags:
+    - RMCNailgunHolster
+  - type: ItemMapper
+    spriteLayers:
+    - holstered
+    - nailgun_fill
+    - nailguncompact_fill
+    - nailguntactical_fill
+    mapLayers:
+      holstered:
+        whitelist:
+          components:
+          - Nailgun
+      nailgun_fill:
+        whitelist:
+          tags:
+          - RMCWeaponSMGNailgun
+      nailguncompact_fill:
+        whitelist:
+          tags:
+          - RMCNailgunCompact
+      nailguntactical_fill:
+        whitelist:
+          tags:
+          - RMCNailgunTactical
+  - type: ItemCamouflage
+    camouflageVariations: { }
+
+- type: Tag
+  id: RMCNailgunHolster
