Add playtime ranks for all relevant responders (Miltiary goes up to O4)

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/cmb_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/cmb_responder.yml
@@ -5,6 +5,10 @@
   description: rmc-job-description-cmb-responder
   playTimeTracker: RMCJobCMBResponder
   ranks:
+    RMCRankCMBMarshal:
+    - !type:RoleTimeRequirement
+      role: RMCJobUNMCResponder
+      time: 90000 # 25 hours
     RMCRankCMBDeputy: []
   startingGear: RMCGearCMBResponder
   icon: "CMJobIconEmpty"
