--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Departments/survivor_department.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Departments/survivor_department.yml
@@ -11,6 +11,6 @@
   - CMSurvivorEngineer
   - CMSurvivorSecurity
   - CMSurvivorCorporate
-  - RMCSurvivorForeconBase
+  - RMCSurvivorCommandingOfficer
   departmentRadio: null
   headOfDepartment: null
