--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/marksman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/marksman.yml
@@ -36,6 +36,8 @@
     - type: EquipSurvivorPreset
       preset: RMCSurvivorPresetForeconMarksman
     - type: ScoutWhitelist
+    - type: JobPrefix
+      prefix: rmc-job-prefix-forecon
   hidden: true
 
 - type: playTimeTracker
