--- a/Resources/Prototypes/_RMC14/Catalog/Fills/Clothing/satchels.yml
+++ b/Resources/Prototypes/_RMC14/Catalog/Fills/Clothing/satchels.yml
@@ -35,3 +35,38 @@
     contents:
     - id: CMGrenadeFrag
       amount: 6
+
+- type: entity
+  parent: CMSatchelMarine
+  id: RMCSatchelMarineForeconSurvivorFill
+  suffix: FORECON, Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: RMCRadioHandheldColony
+
+- type: entity
+  parent: RMCSatchelMarineLogisticsBig
+  id: RMCSatchelMarineLogisticsBigForeconSurvivorFill
+  suffix: FORECON Support Tech, Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: RMCRadioHandheldColony
+    - id: CMFireExtinguisherPortable
+    - id: CMDefibrillator
+    - id: RMCPouchMedkitFillAdvanced
+    - id: CMHealthAnalyzer
+
+- type: entity
+  parent: CMSatchelMarine
+  id: RMCSatchelMarineForeconSurvivorCommanderFill
+  suffix: FORECON CO, Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: RMCRadioHandheldColony
+    - id: RMCLaserDesignator
+    - id: RMCDrinkAlcoholDavenport
+    - id: RMCZippoGold
+    - id: CMTarbackCigar
