--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/squad_leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/squad_leader.yml
@@ -40,6 +40,8 @@
       whitelist:
         tags:
         - RMCSquadFORECON
+    - type: JobPrefix
+      prefix: rmc-job-prefix-forecon
     - type: EquipSurvivorPreset
       preset: RMCSurvivorPresetForeconSquadLead
   hidden: true
