headset fixes, jacket fixes

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
@@ -99,4 +99,8 @@
       key_slots:
       - CMEncryptionKeyCommon
       - RMCEncryptionKeyMarineCommand
-      - RMCEncryptionKeyFORECON
+  - type: GrantSquadLeaderTracker
+  - type: GrantTacMapAlert
+  - type: RMCHeadset
+    channels:
+    - MarineForecon
