--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/commander.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/commander.yml
@@ -66,6 +66,7 @@
     belt: RMCMatebaBeltForeconFilled
     outerClothing: RMCJacketWindbreakerForeconFilled
     back: RMCSatchelMarineForeconSurvivorCommanderFill
+    id: CMIDCardGold
 
 - type: entity
   parent: CMSpawnPointJobBase
