--- a/Resources/Prototypes/_RMC14/Catalog/Fills/Clothing/satchels.yml
+++ b/Resources/Prototypes/_RMC14/Catalog/Fills/Clothing/satchels.yml
@@ -70,3 +70,13 @@
     - id: RMCDrinkAlcoholDavenport
     - id: RMCZippoGold
     - id: CMTarbackCigar
+
+- type: entity
+  parent: CMSatchelMarine
+  id: RMCSatchelMarineForeconSurvivorSmartgunOperatorFill
+  suffix: FORECON CO, Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: RMCRadioHandheldColony
+    - id: RMCPowerCellSmartgun
