--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/smart_gun_operator.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/smart_gun_operator.yml
@@ -48,13 +48,7 @@
   id: RMCGearForeconSmartgunOperator
   equipment:
     belt: RMCBeltSmartGunOperatorPistolForeconFilled
-  storage:
-    outerClothing:
-    - CMCrowbar
-    - RMCFlashlight
-    back:
-    - RMCRadioHandheldColony
-    - RMCPowerCellSmartgun
+    back: RMCSatchelMarineForeconSurvivorSmartgunOperatorFill
 
 - type: entity
   parent: CMSpawnPointJobBase
