--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/base_forecon.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/base_forecon.yml
@@ -40,7 +40,7 @@
   components:
   - type: SurvivorPreset
     randomClothing: # TODO durag and grey beanie
-    - [ CMHeadCap ]
+    - [ RMCHeadCapFlippable ]
     - [ RMCBoonieTan ]
     - [ ArmorHelmetM10 ]
     randomGearOther:
