--- a/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
@@ -189,7 +189,7 @@
 - type: entity
   parent: SquadBase
   id: SquadFORECON
-  name: Reconnaissance
+  name: Recon # ToDO change to Reconnaissance, currently the ID name will be cut off
   components:
   - type: SquadTeam
     color: "#32CD32"
