fix minor issue in CMB rank thing

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/cmb_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/cmb_responder.yml
@@ -7,7 +7,7 @@
   ranks:
     RMCRankCMBMarshal:
     - !type:RoleTimeRequirement
-      role: RMCJobUNMCResponder
+      role: RMCJobCMBResponder
       time: 90000 # 25 hours
     RMCRankCMBDeputy: []
   startingGear: RMCGearCMBResponder
