fixes CLF from Colonial LF to Colony LF (why is it like this)

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Misc/stamps.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Misc/stamps.yml
@@ -188,7 +188,7 @@
 - type: entity
   parent: CMStampBase
   id: RMCStampCLF
-  name: colonial liberation front rubber stamp
+  name: colony liberation front rubber stamp
   suffix: Admin, CLF
   components:
   - type: Sprite
