--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
@@ -97,8 +97,7 @@
   - type: ContainerFill
     containers:
       key_slots:
-      - CMEncryptionKeyCommon
-      - RMCEncryptionKeyMarineCommand
+      - RMCEncryptionKeyFORECON
   - type: GrantSquadLeaderTracker
   - type: GrantTacMapAlert
   - type: RMCHeadset
