add job icons for forecon

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/marksman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/marksman.yml
@@ -7,6 +7,7 @@
     sprite: _RMC14/Interface/map_blips.rsi
     state: spec
   startingGear: RMCGearForeconBase
+  icon: "CMJobIconWeaponsSpecialist"
   special:
   - !type:AddComponentSpecial
     components:
