--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/commander.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/commander.yml
@@ -15,6 +15,8 @@
    sprite: _RMC14/Interface/map_blips.rsi
    state: background_command
   roleWeight: 0.25
+  icon: "RMCJobIconForeconCommander"
+  hasIcon: true
   special:
   - !type:AddComponentSpecial
     components:
@@ -81,3 +83,10 @@
 - type: playTimeTracker
   id: RMCJobSurvivorCommanderForecon
   isHumanoid: true
+
+- type: jobIcon
+  parent: CMJobIconBase
+  id: RMCJobIconForeconCommander
+  icon:
+    sprite: _RMC14/Interface/cm_job_icons.rsi
+    state: hudsquad_vo
