--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/smart_gun_operator.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/smart_gun_operator.yml
@@ -7,6 +7,7 @@
     sprite: _RMC14/Interface/map_blips.rsi
     state: smartgunner
   startingGear: RMCGearForeconSmartgunOperator
+  icon: "CMJobIconSmartGunOperator"
   special:
   - !type:AddComponentSpecial
     components:
