--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/support_technician.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/support_technician.yml
@@ -7,6 +7,7 @@
     sprite: _RMC14/Interface/map_blips.rsi
     state: engi
   startingGear: RMCGearForeconSupportTech
+  icon: "CMJobIconCombatTech"
   special:
   - !type:AddComponentSpecial
     components:
