--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/civilian_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/civilian_survivor.yml
@@ -39,6 +39,7 @@
       factions:
       - Survivor
     - type: IntelRescueSurvivorObjective
+    - type: RMCRibbon
   greeting: rmc-job-greeting-survivor
   hasIcon: false
 
