--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/engineer_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/engineer_survivor.yml
@@ -24,6 +24,7 @@
     - type: RMCSurvivor
     - type: MotionDetectorTracked
     - type: NpcFactionMember
+    - type: RMCRibbon
       factions:
       - Survivor
     - type: IntelRescueSurvivorObjective
