--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/correspondent.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/correspondent.yml
@@ -36,6 +36,7 @@
       icon:
         sprite: _RMC14/Interface/map_blips.rsi
         state: correspondent
+    - type: RMCRibbon
   hasIcon: false
 
 - type: startingGear
