--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
@@ -56,6 +56,7 @@
       icon:
         sprite: _RMC14/Interface/map_blips.rsi
         state: synth
+    - type: RMCRibbon
   hidden: true
 
 - type: startingGear
