--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/doctor_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/doctor_survivor.yml
@@ -25,6 +25,7 @@
     - type: RMCSurvivor
     - type: MotionDetectorTracked
     - type: NpcFactionMember
+    - type: RMCRibbon
       factions:
       - Survivor
     - type: IntelRescueSurvivorObjective
