Add Playtime ribbons to non-military responders

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/clf_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/clf_responder.yml
@@ -31,6 +31,7 @@
         RMCSkillVehicles: 2
     - type: JobPrefix
       prefix: rmc-job-prefix-clf-responder
+    - type: RMCRibbon
   hasIcon: false
   hidden: true
 
