--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/free_press_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/free_press_responder.yml
@@ -29,6 +29,7 @@
         RMCSkillPowerLoader: 1
         RMCSkillSurgery: 1
         RMCSkillVehicles: 2
+    - type: RMCRibbon
   hasIcon: false
   hidden: true
 
