--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/we-ya_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/we-ya_responder.yml
@@ -37,6 +37,7 @@
         RMCSkillPowerLoader: 1
         RMCSkillSurgery: 1
         RMCSkillVehicles: 2
+    - type: RMCRibbon
   hasIcon: false
   hidden: true
 
