--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Attachments/under_attachments.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Attachments/under_attachments.yml
@@ -454,6 +454,8 @@
   - type: RMCSelectiveFire
     baseFireRate: 0.417
   - type: GunIgnorePrediction
+  - type: GunIFF
+    enabled: true
   - type: BallisticAmmoProvider
     cycleable: false
     whitelist:
@@ -475,6 +477,7 @@
         volume: 5
     timerStart: enum.TimerStartMode.OnHitGround
   - type: ShootAtFixedPoint
+    shootArcProj: true
     maxFixedRange: 7
   - type: UniqueAction
   - type: BreechLoaded
