--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/correspondent.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/correspondent.yml
@@ -26,6 +26,7 @@
   special:
   - !type:AddComponentSpecial
     components:
+    - type: RMCUserBulkyArmorIncapable
     - type: Skills
       skills:
         RMCSkillFirearms: 0
