--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Hands/marine.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Hands/marine.yml
@@ -12,6 +12,7 @@
     fiberMaterial: fibers-leather
     fiberColor: fibers-black
   - type: FingerprintMask
+  - type: RMCBulkyArmor
 
 - type: entity
   parent: CMHandsBlackMarine
