--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Head/Helmets/marine_helmets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Head/Helmets/marine_helmets.yml
@@ -250,6 +250,8 @@
     sprite: _RMC14/Objects/Clothing/Head/Helmets/press.rsi
   - type: ItemCamouflage
     camouflageVariations: { }
+  - type: RMCBulkyArmor
+    isBulky: false
 
 # M3-S Scout Spec
 - type: entity
