--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Revolvers/mateba.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Revolvers/mateba.yml
@@ -18,6 +18,7 @@
     tags:
     - Sidearm
     - RMCRevolver
+    - RMCMateba
   - type: Corrodible
     isCorrodible: false
   - type: RevolverAmmoProvider
