Make UNMC responder use formal service uniform as opposed to normal (fits better with jacket)

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/unmc_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/unmc_responder.yml
@@ -68,7 +68,7 @@
 - type: startingGear
   id: RMCGearUNMCResponder
   equipment:
-    jumpsuit: CMJumpsuitBO
+    jumpsuit: CMJumpsuitXOFormal
     outerClothing: CMCoatXOFormal
     shoes: RMCShoesLaceup
     head: RMCHeadCapFlippable
