--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/average_joe.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/average_joe.yml
@@ -44,7 +44,7 @@
 - type: startingGear
   id: RMCGearAverageJoe
   equipment:
-    jumpsuit: CMJumpsuitAverageJoe
+    jumpsuit: CMJumpsuitAverageJoeWebbing
     gloves: CMHandsInsulated
     shoes: RMCShoesWhite
     id: RMCIDCardSynth
