--- a/Resources/Prototypes/_RMC14/Entities/Objects/patron_figurines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/patron_figurines.yml
@@ -1353,3 +1353,14 @@
     state: khauni_brooks
   - type: PatronFigurine
     id: f68a79ad-3427-4b38-a7bb-84e11ef29a93
+
+- type: entity
+  parent: RMCBaseFigurinePatron
+  id: RMCFigurinePatronAustinSpectreEventide
+  name: Austin 'Spectre' Eventide figurine
+  description: ""
+  components:
+  - type: Sprite
+    state: austin_spectre_eventide
+  - type: PatronFigurine
+    id: 6ff41436-85a7-4c3b-bb39-b29738fedef5
