New Queen ability Remote Plasma Transfer, ovi only, can be used from inside the xeno watch window

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
@@ -231,6 +231,7 @@
   - type: ManageHive
   - type: HiveLeaderGranter
   - type: XenoHeal
+  - type: XenoRemoteTransferPlasma
   - type: StunOnExplosionReceived
     weak: false
   - type: XenoSpit
