--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/fun.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/fun.yml
@@ -80,7 +80,7 @@
     - ActionXenoRegurgitate
     - ActionXenoWatch
     - ActionXenoTailStab
-    - ActionXenoPlantWeeds
+    - ActionLesserDronePlantWeeds
     - ActionXenoThrowParasite
     - ActionXenoRetrieveEgg
     - ActionXenoParasiteReserve
