--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
@@ -263,10 +263,7 @@
     CMJumpsuitMP: 2
     CMHeadBeretRed: 6
     CMGlassesSecurity: 3
-    RMCScrubsPrisonMedsec: 4
-    RMCScrubsPrisonMaxsec: 2
-    RMCHeadsetPrisoner: 6
-    RMCShoesPrisoner: 6
+    CMHeadset: 6
 
 - type: entity
   parent: CMVendor
